--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="log_in">Log In</string>
+    <string name="showInfo">Your Information</string>
+    <string name="changePassword">Change Your Password</string>
 
 </resources>
