Commit #2: Login works with current configuration of database. User information activity added and running. Some thread errors when going from IndexActivity to UserInfoActivity a second time.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="new_password1">New Password</string>
     <string name="new_password2">Retype New Password</string>
     <string name="change_password">Change Password</string>
+    <string name="back">Back</string>
 
 </resources>
