--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,9 @@
     <string name="new_password2">Retype New Password</string>
     <string name="change_password">Change Password</string>
     <string name="back">Back</string>
+    <string name="title_activity_direction">DirectionActivity</string>
+    <string name="location1">The Hospital of Upenn</string>
+    <string name="location2">location2</string>
+    <string name="location3">location3</string>
 
 </resources>
