--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="password">Password</string>
     <string name="log_in">Log In</string>
     <string name="showInfo">Your Information</string>
+    <string name="Welcome">Welcome to ResearchAide</string>
     <string name="changePassword">Change Your Password</string>
     <string name="title_activity_change_password">ChangePasswordActivity</string>
     <string name="old_password">Old Password</string>
@@ -15,9 +16,16 @@
     <string name="new_password2">Retype New Password</string>
     <string name="change_password">Change Password</string>
     <string name="back">Back</string>
-    <string name="title_activity_direction">DirectionActivity</string>
+    <string name="title_activity_schedule">Get Schedule</string>
+    <string name="title_activity_direction">Get Directions</string>
+    <string name="title_activity_friend">Tell a Friend</string>
+    <string name="title_activity_compensation">Compensation Status</string>
+    <string name="title_activity_contact">Contact Us</string>
+    <string name="title_activity_consent">Consent Form</string>
+    <string name="title_activity_more">Learn More About ITMAT</string>
     <string name="location1">Division of Geriatric Medicine</string>
     <string name="location2">Penn Therapy and Fitness</string>
     <string name="location3">Presbyterian Medical Center: Neurology</string>
+     <string name="logo">Logo</string>
 
 </resources>
