--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,5 +33,8 @@
 	<string name="contact">contancts</string>
     <string name="schedule">Study Schedule</string>
     <string name="compensation">Compensation Status</string>
+    <string name="subject">Subject</string>
+    <string name="message">Message</string>
+    <string name="contact_us">Contact_us</string>
 
 </resources>
